# felina

./: .codex-rescue-prompt.txt  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LANGUAGE.md  README.md  RELEASE_NOTES.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.knowledge/: _catalog.json  ideas-backlog.md  milestones.md
.session/: agent-capability-research.md  agent-skill-market-complete.md  design-backlog.md  felina_development_report.md  felina_hackathon_ppt_spec_report.md  market-server-deployment.md  product-backlog.md  projects-page-ui-adjustment-report.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: token_reconcile.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  paths.rs  pty.rs
src-tauri/src/commands/: agent_paths.rs  assistant.rs  budget.rs  canonical_skills.rs  context_engine.rs  felina_settings.rs  git.rs  hooks.rs  hub_auth.rs  instructions.rs  keybindings.rs  known_projects.rs  leaderboard.rs  maintenance.rs  market_install.rs  market_publish.rs  market_server.rs  mcp.rs  memory.rs  migration.rs  mod.rs  pipelines.rs  plugins.rs  projects.rs  quota_scheduler.rs  rules.rs  scheduler.rs  sessions.rs  settings.rs  skill_fields.rs  skill_import.rs  skill_library.rs  skill_name.rs  skill_package.rs  skills.rs  snapshot.rs  stats.rs  token_savings.rs  tokens.rs
src-tauri/src/commands/fan_out/: anthropic.rs  codex.rs  gemini.rs  generic.rs  mod.rs
src-tauri/src/ctx/: config.rs  db.rs  embed.rs  hook.rs  mod.rs  retrieve.rs  virtualize.rs
src-tauri/src/filter/: builtin.rs  mod.rs  pipeline.rs  tracker.rs
src-tauri/src/tokens/: agent_message.rs  aggregator.rs  ccusage.rs  mod.rs  pricing.rs  reconciliation.rs  scan_state.rs  scanner.rs  storage.rs  tokscale.rs  tokscale_ingestion.rs  types.rs
src-tauri/src/tokens/parsers/: claude_code.rs  codex_cli.rs  gemini_cli.rs  mod.rs
(+871 files in other folders)
