[package]
name = "glyphic"
version = "0.19.0"
edition = "2021"
default-run = "glyphic"

[lib]
name = "glyphic_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "glyphic-filter"
path = "src/bin/glyphic_filter.rs"

[[bin]]
name = "glyphic-ctx"
path = "src/bin/glyphic_ctx.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
glob = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
base64 = "0.22"
strip-ansi-escapes = "0.2"
regex = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
fastembed = "4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
