[package]
name = "felina"
version = "0.20.0"
edition = "2021"
default-run = "felina"

[lib]
name = "felina_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
glob = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
base64 = "0.22"
strip-ansi-escapes = "0.2"
regex = "1"
toml = "0.8"
# kept for upcoming skill index work in agent-skills-schema-reference change
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1"
walkdir = "2"
serde_yaml = "0.9"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
